--- a/package.json
+++ b/package.json
@@ -3,14 +3,65 @@
   "scripts": {
     "test": "echo Running tests..."
   },
+  "dependencies": {
+    "chalk": "2.4.2",
+    "commander": "2.19.0",
+    "cross-spawn": "6.0.5",
+    "envinfo": "7.1.0",
+    "fs-extra": "7.0.1",
+    "hyperquest": "2.1.3",
+    "inquirer": "6.2.2",
+    "semver": "6.0.0",
+    "tar-pack": "3.4.1",
+    "tmp": "0.0.33",
+    "validate-npm-package-name": "3.0.0",
+    "confusing-browser-globals": "^1.0.7",
+    "core-js": "3.0.1",
+    "object-assign": "4.1.1",
+    "promise": "8.0.2",
+    "raf": "3.4.1",
+    "regenerator-runtime": "0.13.2",
+    "whatwg-fetch": "3.0.0",
+    "@babel/code-frame": "7.0.0",
+    "address": "1.0.3",
+    "browserslist": "4.5.4",
+    "detect-port-alt": "1.1.6",
+    "escape-string-regexp": "1.0.5",
+    "filesize": "3.6.1",
+    "find-up": "3.0.0",
+    "fork-ts-checker-webpack-plugin": "1.0.1",
+    "global-modules": "2.0.0",
+    "globby": "8.0.2",
+    "gzip-size": "5.0.0",
+    "immer": "1.10.0",
+    "is-root": "2.0.0",
+    "loader-utils": "1.2.3",
+    "opn": "5.4.0",
+    "pkg-up": "2.0.0",
+    "react-error-overlay": "^5.1.5",
+    "recursive-readdir": "2.2.2",
+    "shell-quote": "1.6.1",
+    "sockjs-client": "1.3.0",
+    "strip-ansi": "5.2.0",
+    "text-table": "0.2.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "1.x",
+    "@typescript-eslint/parser": "1.x",
+    "babel-eslint": "10.x",
+    "eslint": "5.x",
+    "eslint-plugin-flowtype": "2.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x"
+  },
   "devDependencies": {
-    "eslint": "5.16.0",
     "execa": "1.0.0",
-    "fs-extra": "^7.0.1",
-    "get-port": "^4.2.0",
     "globby": "^9.1.0",
     "husky": "^1.3.1",
-    "jest": "24.7.1",
     "lerna": "3.13.2",
     "lerna-changelog": "~0.8.2",
     "lint-staged": "^8.0.4",
@@ -21,6 +72,91 @@
     "strip-ansi": "^5.1.0",
     "svg-term-cli": "^2.1.1",
     "tempy": "^0.2.1",
-    "wait-for-localhost": "^3.1.0"
+    "wait-for-localhost": "^3.1.0",
+    "babel-plugin-tester": "^6.0.1",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-decorators": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-transform-classes": "7.4.3",
+    "@babel/plugin-transform-destructuring": "7.4.3",
+    "@babel/plugin-transform-flow-strip-types": "7.4.0",
+    "@babel/plugin-transform-react-constant-elements": "7.2.0",
+    "@babel/plugin-transform-react-display-name": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.3.3",
+    "@babel/runtime": "7.4.3",
+    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-macros": "2.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "@babel/code-frame": "7.0.0",
+    "anser": "1.4.8",
+    "chalk": "^2.4.2",
+    "chokidar": "^2.1.2",
+    "cross-env": "5.2.0",
+    "flow-bin": "^0.63.1",
+    "html-entities": "1.2.1",
+    "jest-fetch-mock": "2.1.2",
+    "object-assign": "4.1.1",
+    "promise": "8.0.2",
+    "raw-loader": "^1.0.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "rimraf": "^2.6.3",
+    "settle-promise": "1.0.0",
+    "source-map": "0.5.6",
+    "@babel/core": "7.4.3",
+    "@svgr/webpack": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.7.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^8.0.0",
+    "camelcase": "^5.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "identity-obj-proxy": "3.0.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.2.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
+    "postcss-safe-parser": "4.0.1",
+    "react-app-polyfill": "^1.0.0",
+    "react-dev-utils": "^9.0.0",
+    "resolve": "1.10.0",
+    "sass-loader": "7.1.0",
+    "semver": "6.0.0",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "4.2.0"
   }
 }
