simple change; no cache impact

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "test": "echo Running tests..."
+    "test": "echo Running tests... 2"
   },
   "dependencies": {
     "chalk": "2.4.2",
