--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "strip-ansi": "^5.1.0",
     "style-loader": "0.23.1",
     "svg-term-cli": "^2.1.1",
-    "tempy": "^0.2.1",
+    "tempy": "0.3.0",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
     "wait-for-localhost": "^3.1.0",
