Fix appveyor cache

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
   YARN_CACHE_FOLDER: '%APPVEYOR_BUILD_FOLDER%/yarn-cache'
 
 cache:
-  - 'YARN_CACHE_FOLDER -> yarn.lock'
+  - '%YARN_CACHE_FOLDER% -> yarn.lock'
 
 build_script:
   - yarn --frozen-lockfile
