--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,13 @@ jobs:
 
   - saveCache: $(Build.SourcesDirectory)/yarn.lock
     path: $(YARN_CACHE_FOLDER)
+
+
+- job: yarncache2
+  container: ubuntu:16.04
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
+  - checkout: self
+  - bash: ls -la
+  - script: printenv  
