--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,15 +16,5 @@ jobs:
   - script: yarn --frozen-lockfile
     displayName: 'Run yarn'
 
-  - saveCache: $(Build.SourcesDirectory)/yarn.lock
-    path: $(YARN_CACHE_FOLDER)
-
-
-- job: yarncache2
-  container: ubuntu:16.04
-  pool:
-    vmImage: 'ubuntu-16.04'
-  steps:
-  - checkout: self
-  - bash: ls -la
-  - script: printenv  
+#  - saveCache: $(Build.SourcesDirectory)/yarn.lock
+#    path: $(YARN_CACHE_FOLDER)
