--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,21 @@
 jobs:
-- job: yarncache
+- job: publish
   pool:
     name: Default
-  variables:  
-    YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
   steps:
-  #- script: |
-      #md $(YARN_CACHE_FOLDER)
-      #yarn cache dir
-      #yarn cache list
+  - script: |
+      md a1
+      cp *.yml a1
+    displayName: Copy files
 
-  - restoreCache: $(Build.SourcesDirectory)/yarn.lock
-    path: $(YARN_CACHE_FOLDER)
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: a1
+      targetPath: '$(Build.SourcesDirectory)/a1'
 
-  - script: yarn --frozen-lockfile
-    displayName: 'Run yarn'
-
-#  - saveCache: $(Build.SourcesDirectory)/yarn.lock
-#    path: $(YARN_CACHE_FOLDER)
+- job: download
+  dependsOn: publish
+  pool:
+    name: Default
+  steps:
+  - download: current
