switch back to regular jobs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,36 @@
-stages:
-- stage: build
-  jobs:
-  - job: publish
-    pool:
-      name: Default
-    steps:
-    - script: |
-        md a1
-        copy *.yml a1
-      displayName: Copy files2
+#stages:
+#- stage: build
+jobs:
+- job: publish
+  pool:
+    name: Default
+  steps:
+  - script: |
+      md a1
+      copy *.yml a1
+    displayName: Copy files2
 
-    - task: PublishPipelineArtifact@0
-      inputs:
-        artifactName: a1
-        targetPath: '$(Build.SourcesDirectory)/a1'
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: a1
+      targetPath: '$(Build.SourcesDirectory)/a1'
 
-- stage: deploy
-  jobs:
-  - deployment: deploy
-    pool:
-      name: Default
-    environment: staging
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-          - script: echo Hello
+- job: download
+  dependsOn: publish
+  pool:
+    name: Default
+  steps:
+  - download: current
+
+# - stage: deploy
+#   jobs:
+#   - deployment: deploy
+#     pool:
+#       name: Default
+#     environment: staging
+#     strategy:
+#       runOnce:
+#         deploy:
+#           steps:
+#           - download: current
+#           - script: echo Hello
