--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,19 @@
 jobs:
 - job: yarncache
   pool:
-    name: Default
+    name: Caching
   variables:  
     YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
   steps:
-  #- script: |
-      #md $(YARN_CACHE_FOLDER)
-      #yarn cache dir
-      #yarn cache list
-
-  - restoreCache: $(Build.SourcesDirectory)/yarn.lock
-    path: $(YARN_CACHE_FOLDER)
+  - task: RestoreCache@0
+    inputs:
+      key: '$(Build.SourcesDirectory)/yarn.lock'
+      path: '$(YARN_CACHE_FOLDER)'
 
   - script: yarn --frozen-lockfile
     displayName: 'Run yarn'
 
-#  - saveCache: $(Build.SourcesDirectory)/yarn.lock
-#    path: $(YARN_CACHE_FOLDER)
+  - task: SaveCache@0
+    inputs:
+      key: '$(Build.SourcesDirectory)/yarn.lock'
+      path: '$(YARN_CACHE_FOLDER)'
