--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,48 @@
-jobs:
-- job: yarncache
-  pool:
-    name: Caching
-  variables:  
-    YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
-  steps:
-  - task: RestoreCache@0
-    inputs:
-      key: '$(Build.SourcesDirectory)/yarn.lock'
-      path: '$(YARN_CACHE_FOLDER)'
+variables:  
+  YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
 
-  - script: yarn --frozen-lockfile
-    displayName: 'Run yarn'
+stages:
+- stage: initcache
+  jobs:
+  - job:
+    strategy:
+      matrix:
+        linux:
+          VM_IMAGE: ubuntu-16.04
+        windows:  
+          VM_IMAGE: vs2017-win2016
+        macOS:
+          VM_IMAGE: macOS-10.13
+    pool:
+      vmImage: $(VM_IMAGE)
+    steps:
+    - script: yarn --frozen-lockfile
+      displayName: 'Run yarn'
 
-  - task: SaveCache@0
-    inputs:
-      key: '$(Build.SourcesDirectory)/yarn.lock'
-      path: '$(YARN_CACHE_FOLDER)'
+    - task: PublishPipelineArtifact@0
+      inputs:
+        targetPath: '$(YARN_CACHE_FOLDER)'
+        artifactName: 'yarn-$(Agent.OS)'
+      displayName: Publish yarn cache artifact
+
+- stage: testcache
+  jobs:
+  - job: yarncache
+    strategy:
+      matrix:
+        linux:
+          VM_IMAGE: ubuntu-16.04
+        windows:  
+          VM_IMAGE: vs2017-win2016
+        macOS:
+          VM_IMAGE: macOS-10.13
+    pool:
+      vmImage: $(VM_IMAGE)
+    steps:
+    - task: DownloadPipelineArtifact@1
+      inputs:
+        artifactName: 'yarn-$(Agent.OS)'
+        targetPath: '$(YARN_CACHE_FOLDER)'
+    
+    - script: yarn --frozen-lockfile
+      displayName: 'Run yarn'
