--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,12 @@ stages:
   - job: initcache
     strategy:
       matrix:
-        linux:
-          VM_IMAGE: ubuntu-16.04
+        #linux:
+        #  VM_IMAGE: ubuntu-16.04
         windows:  
           VM_IMAGE: vs2017-win2016
-        macOS:
-          VM_IMAGE: macOS-10.13
+        #macOS:
+        #  VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
     steps:
@@ -35,12 +35,12 @@ stages:
   - job: testcache
     strategy:
       matrix:
-        linux:
-          VM_IMAGE: ubuntu-16.04
+        #linux:
+        #  VM_IMAGE: ubuntu-16.04
         windows:  
           VM_IMAGE: vs2017-win2016
-        macOS:
-          VM_IMAGE: macOS-10.13
+        #macOS:
+        #  VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
     steps:
