--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ stages:
           VM_IMAGE: ubuntu-16.04
         windows:  
           VM_IMAGE: vs2017-win2016
-        #macOS:
-        #  VM_IMAGE: macOS-10.13
+        macOS:
+          VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
     steps:
@@ -39,8 +39,8 @@ stages:
           VM_IMAGE: ubuntu-16.04
         windows:  
           VM_IMAGE: vs2017-win2016
-        #macOS:
-        #  VM_IMAGE: macOS-10.13
+        macOS:
+          VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
     steps:
