--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ stages:
         versionSpec: 10.x
       displayName: 'Install Node 10.x'
 
+    - script: yarn config set registry https://registry.npmjs.org/
+
     - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
