--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,3 @@
-variables:  
-  YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
-
 stages:
 - stage: init
   jobs:
@@ -15,13 +12,17 @@ stages:
           VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
+    variables:  
+      YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
     steps:
     - task: NodeTool@0
       inputs:
         versionSpec: 10.x
       displayName: 'Install Node 10.x'
 
-    - script: yarn --frozen-lockfile --registry https://registry.npmjs.org/
+    - bash: echo "${YARN_CACHE_FOLDER}"
+
+    - script: yarn --frozen-lockfile
       displayName: 'Run yarn'
 
     - task: PublishPipelineArtifact@0
@@ -43,6 +44,8 @@ stages:
           VM_IMAGE: macOS-10.13
     pool:
       vmImage: $(VM_IMAGE)
+    variables:  
+      YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
     steps:
     - task: DownloadPipelineArtifact@1
       inputs:
