--- a/azure-pipelines-with-tasks.yml
+++ b/azure-pipelines-with-tasks.yml
@@ -1,7 +1,7 @@
 jobs:
 - job: build
   pool:
-    name: Caching
+    name: Default
   variables:  
     YARN_CACHE_FOLDER: $(Pipeline.Workspace)/yarn-cache
   steps:
